# Swarm-Robotics-Simulation

./: .gitignore  0662.py  DISCLAIMER.md  README.md  pyproject.toml  setup.py
config/: simulation.yaml
demo/: streamlit_app.py
examples/: basic_example.py
launch/: simulation.launch.py
scripts/: swarm_simulation_node.py
src/swarm_robotics/: __init__.py
src/swarm_robotics/controllers/: __init__.py  consensus.py  coverage.py  flocking.py  formation.py
src/swarm_robotics/evaluation/: __init__.py
src/swarm_robotics/simulation/: __init__.py
src/swarm_robotics/utils/: __init__.py
src/swarm_robotics/visualization/: __init__.py
tests/: test_swarm_robotics.py
